--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Ashish-Kaintura.github.io",
   "name": "front-end",
+  "homepage": "https://Ashish-Kaintura.github.io/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
