--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "front-end",
-  "homepage": "https://Ashish-Kaintura.github.io/",
+  "homepage": "https://Ashish-Kaintura.github.io/E-commerce-Front-End",
   "version": "0.1.0",
-  "private": false,
+  "private": "true",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
